--- a/pagina 2.html
+++ b/pagina 2.html
@@ -21,6 +21,6 @@ Comunicación: Los robots pueden comunicarse con otros dispositivos o sistemas a
 Esto permite la interconexión y la colaboración entre robots o la comunicación con sistemas de control centralizados.</p>
 
   <h5>Presiona para regresar</h5>
-  <a href="pagina web clase.html"><img src="https://cdn.pixabay.com/photo/2019/11/27/14/06/pokemon-4657023_1280.png" width="150" alt="150"></a>
+  <a href="index.html"><img src="https://cdn.pixabay.com/photo/2019/11/27/14/06/pokemon-4657023_1280.png" width="150" alt="150"></a>
   </body>
 </html>
