--- a/pagina 2.html
+++ b/pagina 2.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Electronica en robots</title>
+    <link rel="stylesheet" href="estilos pagina web.css">
     <link rel="shortcut icon" href="logope.png">
+    <style>
+      body
+      {
+        text-align: center;
+        background-color: #EEEDAE;
+;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      img{
+
+        border-radius:50%;
+      margin-left: auto;
+      }
+    </style>
   </head>
   <body>
     <h1>La electronica en robots</h1>
